fix tile overflow

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -16,15 +16,6 @@ body,
   margin: 0;
 }
 
-#__next {
-  display: flex;
-  flex-direction: column;
-
-  > * {
-    flex: auto;
-  }
-}
-
 h1,
 h2,
 h3,
