--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,6 +45,7 @@
       width: 100%;
       height: 0;
       padding-bottom: 250/315 * 100%;
+      overflow: hidden;
     }
 
     figure .thumbnail {
@@ -81,7 +82,7 @@
       top: 0;
       left: 0;
       position: absolute;
-      overflow: hidden;
+      word-break: break-word;
       transition: opacity 0.1s ease-out;
     }
 
